--- a/_scss/bbg/pages/_page-kits.scss
+++ b/_scss/bbg/pages/_page-kits.scss
@@ -379,7 +379,7 @@
 
 			@include media($medium-large-screen) {
 				margin: 0 -50% 5rem;
-				max-width: 99.9vw;
+				max-width: none;
 
 				.bbg__announcement__flexbox {
 					.bbg__announcement__headline,
