--- a/style-human.css
+++ b/style-human.css
@@ -6521,8 +6521,8 @@ article {
 }
 @media screen and (min-width: 1201px) {
   .bbg__ribbon--thin {
-    margin: 0px -19%;
-    max-width: 99.9vw;
+    margin: 0 -50%;
+    max-width: none;
   }
 }
 .bbg__ribbon--thin .bbg__label {
@@ -8293,7 +8293,7 @@ div.appropriations-small > p.header {
 @media screen and (min-width: 900px) {
   .bbg__kits__section .bbg__kits__section--row.bbg__ribbon--thin {
     margin: 0 -50% 5rem;
-    max-width: 99.9vw;
+    max-width: none;
   }
   .bbg__kits__section .bbg__kits__section--row.bbg__ribbon--thin .bbg__announcement__flexbox .bbg__announcement__headline,
   .bbg__kits__section .bbg__kits__section--row.bbg__ribbon--thin .bbg__announcement__flexbox p {
